--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <h1 class="pop-in">Happy Birthday to Crystal 🎂 🎉</h1>
             <div class="gallery">
-                <img src="./photo.jpeg" alt="回忆 1" class="centered-image small-image">
+                <img src="./photo.jpg" alt="photo" class="centered-image small-image">
             </div>
             <h3>希望你天天开开心心的做自己想做的事情，一切顺利💕</h3>
             <h4>I love you so much! 🥰</h4>
